# fastapi-mongo-project

./: .env-sample  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  env.fastapi-mongo  init-mongo.js
source/: celery_conf.py  conf.py  main.py  pyproject.toml  settings.py  utils.py
source/auth/: conf.py  config.py  tasks.py  utils.py
source/custom_logging/: config.py  middleware.py
source/db/: conf.py  db.py  managers.py  models.py  users.py  utils.py
source/endpoints/: auth.py  foods.py  reservations.py  restaurants.py  tables.py  users.py
